Add support for V2 dataset and generate random walks
* Generate random walks when generating the data in case some model wants
to use it.
* Add support for V2 dataset.
* Don't generate node features file by default.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,12 @@
 # Ignore the readings dir which contains research
 # papers and other relevant readings for the project
 readings/*
+# Ignore graph data
+citation-network2.rar
+citation-network2.txt
 outputacm.txt
 acm*
 GraphSAGE/unsup-../*
+graph_stat
+validation_edges
+validation_nonedges
